tests/errors/raise_uncaught.dang
# An uncaught raise should crash the program
pub result = raise "unhandled error"
